--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ajax": "0.0.4",
     "axios": "^0.17.1",
     "jQuery": "^1.7.4",
+    "jasmine": "^2.8.0",
     "vue": "^2.5.2",
     "vue-helpers": "^0.1.0",
     "vue-router": "^3.0.1",
@@ -55,6 +56,7 @@
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
