--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
