--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "eslint": "^4.12.0",
     "express": "^4.16.2",
+    "node-json-db": "^0.7.3",
     "nodemon": "^1.12.1"
   },
   "devDependencies": {
