--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/task.js"
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
