--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,7 +13,8 @@
     "eslint": "^4.12.0",
     "express": "^4.16.2",
     "node-json-db": "^0.7.3",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "require-dir": "^0.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
