--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.1",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
+    "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-helpers": "^0.1.0",
     "vue-router": "^3.0.1",
