--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "eslint": "^4.12.0",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "node-json-db": "^0.7.3",
     "nodemon": "^1.12.1",
     "require-dir": "^0.3.2"
