--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.4",
     "node-json-db": "^0.7.3",
     "nodemon": "^1.12.1",
-    "require-dir": "^0.3.2"
+    "require-dir": "^0.3.2",
+    "webpack": "^3.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -24,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
-    "cors": "^2.8.4"
+    "cors": "^2.8.4",
+    "karma-webpack": "^2.0.6"
   }
 }
