--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ajax": "0.0.4",
     "axios": "^0.17.1",
+    "bulma": "^0.6.1",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
     "uuid": "^3.1.0",
