--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bulma": "^0.6.1",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-helpers": "^0.1.0",
