--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bulma": "^0.6.1",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
+    "noty": "^3.1.3",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-helpers": "^0.1.0",
