--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
     "noty": "^3.1.3",
-    "sortablejs": "^1.7.0",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-helpers": "^0.1.0",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.15.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
