--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "noty": "^3.1.3",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
+    "vue-event-calendar": "^1.5.1",
+    "vue-flatpickr-component": "^5.0.0",
     "vue-helpers": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.15.0",
+    "vuejs-datepicker": "^0.9.21",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -83,6 +86,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon-chai": "^2.8.0",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
