--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
     "noty": "^3.1.3",
+    "sweetalert": "^2.0.8",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-event-calendar": "^1.5.1",
