--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ajax": "0.0.4",
     "axios": "^0.17.1",
     "bulma": "^0.6.1",
+    "font-awesome": "^4.7.0",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
     "noty": "^3.1.3",
