--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "font-awesome": "^4.7.0",
     "jQuery": "^1.7.4",
     "jasmine": "^2.8.0",
+    "moment": "^2.19.3",
     "noty": "^3.1.3",
     "sweetalert": "^2.0.8",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
     "vue-event-calendar": "^1.5.1",
     "vue-flatpickr-component": "^5.0.0",
+    "vue-fullcalendar": "^1.0.9",
     "vue-helpers": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.15.0",
