--- a/server/package.json
+++ b/server/package.json
@@ -12,28 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^4.12.0",
     "express": "^4.16.2",
-    "jasmine-node": "^1.14.5",
-    "lodash": "^4.17.4",
-    "module-alias": "^2.0.3",
-    "node-json-db": "^0.7.3",
-    "nodemon": "^1.12.1",
-    "phantomjs": "^2.1.7",
-    "request": "^2.83.0",
-    "require-dir": "^0.3.2",
-    "webpack": "^3.9.0"
+    "node-json-db": "^0.7.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "jasmine": "^2.8.0",
-    "karma-babel-preprocessor": "^7.0.0",
-    "karma-webpack": "^2.0.6"
+    "cors": "^2.8.4"
   }
 }
