--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "node-json-db": "^0.7.3"
+    "node-json-db": "^0.7.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
