--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "node-json-db": "^0.7.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
