--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bulma": "^0.6.1",
+    "cors": "^2.8.4",
     "font-awesome": "^4.7.0",
     "jasmine": "^2.8.0",
     "moment": "^2.19.3",
     "noty": "^3.1.3",
+    "scriptjs": "^2.5.8",
     "sweetalert": "^2.0.8",
     "uuid": "^3.1.0",
     "vue": "^2.5.2",
